Display chart with hardcoded data on button click

--- a/app/dataeng_01.html
+++ b/app/dataeng_01.html
@@ -2,13 +2,16 @@
 <html>
     <head>
         <link rel="stylesheet" href="dataeng_01.css">
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
         <script src="dataeng_01.js"></script>
     </head>
     <body>
         <button id="button01" type="button">
             Show analysis
         </button>
-        <div id="div01">
+        <div id="div01"></div>
+        <div class="chart-container">
+            <canvas id="chart001"></canvas>
         </div>
     </body>
 </html>
