Update lamdba function, html and javascript to handle start_year and end_year

--- a/app/dataeng_01.html
+++ b/app/dataeng_01.html
@@ -6,6 +6,16 @@
         <script src="dataeng_01.js"></script>
     </head>
     <body>
+        <label for="start_year">Start year</label>
+        <br>
+        <input type="number" id="start_year" name="start_year">
+        <br>
+        <br>
+        <label for="end_year">End year</label>
+        <br>
+        <input type="number" id="end_year" name="end_year">
+        <br>
+        <br>
         <button id="button01" type="button">
             Show analysis
         </button>
