Develop javascript for analysis 2 - wip

--- a/app/dataeng_01.html
+++ b/app/dataeng_01.html
@@ -26,24 +26,24 @@
 
         <hr>
         <h2>Analysis 2</h2>
-        <input type="radio" id="all_holidays" name="which_holidays">
+        <input type="radio" id="all_holidays" name="all_or_pick" value="all_holidays">
         <label for="all_holidays">All Holidays</label>
         <br>
-        <input type="radio" id="pick_holidays" name="which_holidays">
+        <input type="radio" id="pick_holidays" name="all_or_pick" value="pick_holidays">
         <label for="pick_holidays">Pick Holidays</label>
         <br>
 
         <p>Choose which holidays to include in chart:</p>
-        <input type="checkbox" id="superbowl" name="superbowl">
+        <input type="checkbox" id="superbowl" name="selected_holidays" value="superbowl">
         <label for="superbowl">Super Bowl</label>
         <br>
-        <input type="checkbox" id="laborday" name="laborday">
+        <input type="checkbox" id="laborday" name="selected_holidays" value="laborday">
         <label for="superbowl">Labor Day</label>
         <br>
-        <input type="checkbox" id="thanksgiving" name="thanksgiving">
+        <input type="checkbox" id="thanksgiving" name="selected_holidays" value="thanksgiving">
         <label for="superbowl">Thanksgiving</label>
         <br>
-        <input type="checkbox" id="christmas" name="christmas">
+        <input type="checkbox" id="christmas" name="selected_holidays" value="christmas">
         <label for="superbowl">Christmas</label>
 
         <br>
