Prepare and display data, modify chart display size

--- a/app/dataeng_01.html
+++ b/app/dataeng_01.html
@@ -20,7 +20,7 @@
         <button id="button01" type="button">
             Show analysis
         </button>
-        <div class="chart-container">
+        <div class="chart-container-1">
             <canvas id="chart01"></canvas>
         </div>
 
@@ -51,7 +51,7 @@
         <button id="button02" type="button">
             Show analysis
         </button>
-        <div class="chart-container">
+        <div class="chart-container-2">
             <canvas id="chart02"></canvas>
         </div>
     </body>
