Add div to display error message

--- a/app/dataeng_01.html
+++ b/app/dataeng_01.html
@@ -51,6 +51,9 @@
         <button id="button02" type="button">
             Show analysis
         </button>
+        <br>
+        <div id="analysis02-error">
+        </div>
         <div class="chart-container-2">
             <canvas id="chart02"></canvas>
         </div>
