Refactoring - all endpoints listed in a separate file

--- a/app/dataeng_01.html
+++ b/app/dataeng_01.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="dataeng_01.css">
         <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+        <script src="endpoints.js"></script>
         <script src="dataeng_01.js"></script>
     </head>
     <body>
