Expand introduction section content

--- a/app/dataeng_01.html
+++ b/app/dataeng_01.html
@@ -15,18 +15,20 @@
             <section>
                 <h2>Introduction</h2>
                 <p>
-                    Picked Walmart Recruiting Store Sales data.
+                    To find datasets that I could use for my demo data engineering project,
+                    I started with a simple Google search and found <a href="https://www.springboard.com/blog/free-public-data-sets-data-science-project/">this</a> blog post among several useful hits.
                 </p>
                 <p>
-                    Reasons include
-                    i) retail data, easy to understand domain
-                    ii) good description of data made available by Kaggle
+                    Of the datasets described in the above blog post, I picked Walmart Recruiting Store Sales data.
+                    Some of the reasons for picking this dataset inclulde:
+                </p>
+                <ol>
+                    <li>Retail data, easy to understand domain</li>
+                    <li>This data is hosted on Kaggle, ver good description of data is provided by Kaggle</li>
+                </ol>
                 </p>
                 <p>
-                    The data location is located <a href="https://www.kaggle.com/c/walmart-recruiting-store-sales-forecasting">here</a>
-                </p>
-                <p>
-                    {Description of data goes here}
+                    Source data located <a href="https://www.kaggle.com/c/walmart-recruiting-store-sales-forecasting">here</a>.
                 </p>
             </section>
             <hr>
