--- a/app/dataeng_01.html
+++ b/app/dataeng_01.html
@@ -115,19 +115,33 @@
                     even with this limitation).
                 </p>
                 <ul>
-                    <li>Data dimension CSV file generation</li>
-                    <ul>
-                        <li>extract only Date and isHoliday columns source sales data</li>
-                        <li>sort on Date field and output only unique rows</li>
-                        <li>add rows for 2010 and 2012 dates that are missing from data</li>
-                        <li>concatenate rest of data with 2010 and 2012 rows created above</li>
-                        <li>insert holiday_name field into data</li>
-                        <li>create sequence column for total number of rows in date data</li>
-                        <li>add sequence data as first column</li>
-                    </ul>
-
-                    <li>Sales fact CSV file generation</li>
-                    <li>Features fact CSV file generation</li>
+                    <li>Data dimension CSV file generation
+                        <ul>
+                            <li>extract only Date and isHoliday columns source sales data</li>
+                            <li>sort on Date field and output only unique rows</li>
+                            <li>add rows for 2010 and 2012 dates that are missing from data</li>
+                            <li>concatenate rest of data with 2010 and 2012 rows created above</li>
+                            <li>insert holiday_name field into data</li>
+                            <li>create sequence column for total number of rows in date data</li>
+                            <li>add sequence data as first column</li>
+                        </ul>
+                    </li>
+                    <li>Sales fact CSV file generation
+                        <ul>
+                            <li>delete IsHoliday field</li>
+                            <li>replace "Date" field with "Date Key" foreign key, lookup date
+                                key from date dimension created above</li>
+                        </ul>
+                    </li>
+                    <li>Features fact CSV file generation
+                        <ul>
+                            <li>features data contains "NA" for missing data values, since these
+                                items are numeric, convert them to 0.0</li>
+                            <li>delete IsHoliday field</li>
+                            <li>similar to what was done for sales fact generation, replace
+                                "Date" field with "Date Key" foreign key</li>
+                        </ul>
+                    </li>
                 </ul>
             </section>
             <hr>
