--- a/app/dataeng_01.html
+++ b/app/dataeng_01.html
@@ -108,7 +108,7 @@
                     in the next section.
                 </p>
                 <p>
-                    I will describe cleaning and prepration I performed while creating
+                    Here, I will describe cleaning and prepration I performed while creating
                     each of the dimension and fact CSV files. Because the ETL tool that I picked
                     is a sync-only tool, I had to perform cleaning of certain data items that
                     would otherwise be performed by the ETL tool (I found Stitch to be great
@@ -117,13 +117,12 @@
                 <ul>
                     <li>Data dimension CSV file generation
                         <ul>
-                            <li>extract only Date and isHoliday columns source sales data</li>
+                            <li>extract only Date and isHoliday columns from source sales data</li>
                             <li>sort on Date field and output only unique rows</li>
-                            <li>add rows for 2010 and 2012 dates that are missing from data</li>
-                            <li>concatenate rest of data with 2010 and 2012 rows created above</li>
-                            <li>insert holiday_name field into data</li>
-                            <li>create sequence column for total number of rows in date data</li>
-                            <li>add sequence data as first column</li>
+                            <li>data for a few weeks in not available for the years 2010 and 2012.
+                                Add rows for 2010 and 2012 dates that are missing from data</li>
+                            <li>insert holiday_name field into data for appropriate rows</li>
+                            <li>add sequence data as first column, this will serve as primary key of dimension table created from the CSV file</li>
                         </ul>
                     </li>
                     <li>Sales fact CSV file generation
