Add content to Analysis section

--- a/app/dataeng_01.html
+++ b/app/dataeng_01.html
@@ -226,17 +226,16 @@
             <section>
                 <h2>Analysis</h2>
                 <p>
-                    The following analyses are sample of possible analyses that can be
+                    The following analyses are a sample of possible analyses that can be
                     performed on the data.
                 </p>
-                <p>
-                    Analysis buttons kick off ajax calls to AWS Lambda functions.
-
-                    The lambda functions run analysis SQL queries on the postgres
-                    database and return the result to the web application.
-
-                    Chartjs for rendering charts
-                </p>
+                <h3>Overview</h3>
+                <ul>
+                    <li>Analysis buttons kick off ajax calls to AWS Lambda functions</li>
+                    <li>The lambda functions run analysis SQL queries on the postgres
+                        database and return the result to the web application</li>
+                    <li>Chartjs is used for rendering charts</li>
+                </ul>
 
                 <article>
                     <h3>Analysis 1</h3>
