Add analysis-1 content

--- a/app/dataeng_01.html
+++ b/app/dataeng_01.html
@@ -238,7 +238,14 @@
                 </ul>
 
                 <article>
-                    <h3>Analysis 1</h3>
+                    <h3>Analysis 1 - Data Availability, Number of Weeks per Year</h3>
+                    <p>
+                        An extremenly simple analysis. Counts the number of weeks for which
+                        data is available for each year.
+                    </p>
+                    <p>
+                        Enter years between 2010 and 2012. One or both fields can be left empty.
+                    </p>
                     <label for="start_year">Start year</label>
                     <br>
                     <input type="number" id="start_year" name="start_year">
