Add analysis-2 content

--- a/app/dataeng_01.html
+++ b/app/dataeng_01.html
@@ -240,7 +240,7 @@
                 <article>
                     <h3>Analysis 1 - Data Availability, Number of Weeks per Year</h3>
                     <p>
-                        An extremenly simple analysis. Counts the number of weeks for which
+                        An extremely simple analysis. Counts the number of weeks for which
                         data is available for each year.
                     </p>
                     <p>
@@ -265,7 +265,10 @@
                 </article>
 
                 <article>
-                    <h3>Analysis 2</h3>
+                    <h3>Analysis 2 - Week-of-Holiday Sales Compared to Annual Weekly Average</h3>
+                    <p>
+                        Pick radio button option to chart either all holidays or specific holidays.
+                    </p>
                     <input type="radio" id="all_holidays" name="all_or_pick" value="all_holidays">
                     <label for="all_holidays">All Holidays</label>
                     <br>
