Improve Show Analysis button rendering

--- a/app/dataeng_01.html
+++ b/app/dataeng_01.html
@@ -257,7 +257,7 @@
                     <br>
                     <br>
                     <button id="button01" type="button">
-                        Show analysis
+                        Show Analysis
                     </button>
                     <div class="chart-container-1">
                         <canvas id="chart01"></canvas>
@@ -292,7 +292,7 @@
                     <br>
                     <br>
                     <button id="button02" type="button">
-                        Show analysis
+                        Show Analysis
                     </button>
                     <br>
                     <div id="analysis02-error">
